--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,10 @@ html {
   font-size: 1em;
   line-height: 1.4;
 }
+body {
+  background-color: #8833FF;
+
+}
 
 /*
  * Remove text-shadow in selection highlight:
