added and image

--- a/css/main.css
+++ b/css/main.css
@@ -17,9 +17,8 @@ html {
   line-height: 1.4;
 }
 body {
-  background-color: #8833FF;
+  background-color: #FFF;
   font-family: 'Roboto';
-
 }
 
 /*
