--- a/css/main.css
+++ b/css/main.css
@@ -21,14 +21,24 @@ html {
   text-align: center;
 }
 body {
-  background-color: #FFF;
+  background-image: url(../img/llamap1.jpg);
   font-family: 'Roboto';
+
+  height: 500px;
+  background-attachment: fixed;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 img{
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+p{
+  background-color: rgb(128, 191, 255, 0.7)
 }
 
 /*
