fixd css errors

--- a/css/main.css
+++ b/css/main.css
@@ -48,7 +48,7 @@ img{
     /* The image used */
   background-image: url("../img/llama.gif");
   /* Set a specific height */
-  min-height: 1000px; !important
+  min-height: 1000px !important;
 
 }
 
