--- a/css/main.css
+++ b/css/main.css
@@ -45,10 +45,11 @@ img{
   background-size: cover;
 }
 #one{
+  padding-top: 200px;
     /* The image used */
   background-image: url("../img/llama.gif");
   /* Set a specific height */
-  min-height: 1000px !important;
+  background-size: unset;
 
 }
 
